# sis

./: .gitignore  Cargo.toml  Makefile  Rocket.toml  package-lock.json
board/: Cargo.toml  readme
deploy/: Makefile  _ENV.list  compose.prod.yaml  compose.yaml  nginx.prod.conf
esp32/: .env.template  .gitignore  Cargo.toml  Makefile  build.rs  readme  sdkconfig.defaults
esp32/src/: boardinfo.rs  main.rs  relay.rs  schedule.rs  time.rs  wifi.rs  ws.rs
server/: Cargo.toml  Dockerfile
server/src/: main.rs
toto/: .gitignore  Cargo.toml  Makefile  readme  sdkconfig.defaults
toto/src/: main.rs
web/: Dockerfile  Dockerfile.prod  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.module.css  layout.tsx  page.tsx
web/app/actions/: board-actions.ts  schedule-actions.ts
web/app/devices/: BoardActions.tsx  DevicesTable.tsx  EditBoardModal.tsx  page.tsx
web/app/program/: ClientCommandPanel.tsx  EditProgramModal.tsx  NewProgramModal.tsx  ProgramTable.tsx  _page.tsx  page.tsx
web/pages/api/: programs.ts  status.ts  websocket.ts
web/pages/api/online-clients/: route.ts
web/pages/api/programs/: [id].ts
