[package]
name = "esp32"
version = "0.1.0"
authors = ["Peter Mezei <mezeipetister@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"
strip = true
lto = true

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_websocket_client", version = "1.3.0" }

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync", "alloc"] }
esp-idf-sys = { version = "0.36.1", features = ["binstart", "std", "native"] }
anyhow = { version = "1.0.98", features = ["std"] }
embedded-svc = { version = "0.28", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
ds3231 = { version = "*" }
crossbeam = {version = "0.8.4" }
libc = {version = "0.2"}
bincode = { version = "2.0.1", features = ["serde", "derive", "std", "alloc"]}

[build-dependencies]
embuild = "0.33"
