[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
mongodb = "3.1.1"
rocket = { version = "0.5.1", features = ["json"] }
rocket_ws = "0.1.1"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio = { version = "1", features = ["full"] }
log = "*"
env_logger = "*"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
